@@ -1,5 +1,33 @@
 from zope.interface import Interface
 
 
+# #############################################################################
+#
+#
+#
+#
+#
+#
+#
+#       NOTE: IFollowing is deprecated and it'll be removed in the
+#             next iteraction.
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+# #############################################################################
+
+
+
 class IFollowing(Interface):
     """Interface for following utility."""
