@@ -1,9 +1,5 @@
 <?xml version="1.0"?>
 <componentregistry>
   <utilities>
-    <utility
-      interface="vnccollab.theme.interfaces.IFollowing"
-      factory="vnccollab.theme.following.Following"
-    />
   </utilities>
 </componentregistry>
