@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1112</version>
+  <version>1114</version>
   <dependencies>
     <dependency>profile-collective.plonetruegallery:default</dependency>
     <dependency>profile-plone.app.jquery:default</dependency>
@@ -16,5 +16,6 @@
     <dependency>profile-collective.notices:default</dependency>
     <dependency>profile-collective.quickupload:default</dependency>
     <dependency>profile-vnccollab.common:default</dependency>
+    <dependency>profile-vnccollab.content:default</dependency>
   </dependencies>
 </metadata>
