@@ -27,7 +27,7 @@
     1: from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
     1: from Products.CMFCore.utils import getToolByName
        
-    1: from ..interfaces import IFollowing
+    1: from vnccollab.content.interfaces import IFollowing
        
        
     2: class FollowingView(BrowserView):
