@@ -24,7 +24,7 @@
        
     1: from zope.interface import implements
        
-    1: from .interfaces import IFollowing
+    1: from vnccollab.content.interfaces import IFollowing
        
        
     2: class Following(Persistent):
