@@ -4,6 +4,9 @@ Changelog
 1.7.6 - Unreleased
 ------------------
 
+- Removes Follow functionality.
+  [Jose Dinuncio]
+
 - Remove xmpp chat dependencies from theme package.
   [Vitaliy Podoba]
 
